--- a/style.css
+++ b/style.css
@@ -7,12 +7,17 @@ h1 {
   text-align: center;
   font-size: 40px;
   font-family: Trattatello, Helvetica, sans-serif;
-  padding-top: 10px;
+  padding-top: 10px 5%;
   padding-bottom: 10px;
 }
 
-header {
+.site-header {
   background-color: #87005f;
+  box-shadow: 0 1px 3px #333;
+}
+
+.site-header h1 {
+ margin: 0;
 }
 
 img {
