--- a/style.css
+++ b/style.css
@@ -20,6 +20,21 @@ h1 {
  margin: 0;
 }
 
+.main-nav ul {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+.main-nav ul li {
+  display: inline;
+}
+
+.main-nav ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
 img {
   width: 75%;
   : center;
