--- a/style.css
+++ b/style.css
@@ -51,3 +51,17 @@ img {
 footer {
  color: blue; 
 }
+
+.img1 {
+  float: left;
+}
+
+.img2 {
+  float: right;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
