--- a/style.css
+++ b/style.css
@@ -54,12 +54,14 @@ footer {
 
 .img1 {
   float: left;
-  width: 50%;
+  width: 45%;
+  padding: 2.5%;
 }
 
 .img2 {
   float: right;
-  width: 50%;
+  width: 45%;
+  padding: 2.5%;
 }
 
 .clearfix::after {
