--- a/style.css
+++ b/style.css
@@ -14,10 +14,12 @@ h1 {
 .site-header {
   background-color: #87005f;
   box-shadow: 0 1px 3px #333;
+  padding: 10px 5%;
 }
 
 .site-header h1 {
  margin: 0;
+ padding: 10px 5%;
 }
 
 .main-nav ul {
@@ -78,4 +80,5 @@ footer {
 .main-footer {
   background-color: #87005f;
   box-shadow: 0 1px 3px #333;
+  padding: 40px 5%;
 }
