--- a/style.css
+++ b/style.css
@@ -82,3 +82,12 @@ footer {
   box-shadow: 0 1px 3px #333;
   padding: 40px 5%;
 }
+
+.footer-nav {
+  list-style: none;
+}
+
+.footer-nav li {
+  list-style: none;
+  float: right;
+}
