--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h1 {
 }
 
 #main-text {
-  
+  padding: 10px 5%;
 }
 
 .img1 {
@@ -81,6 +81,7 @@ footer {
   background-color: #87005f;
   box-shadow: 0 1px 3px #333;
   padding: 40px 5%;
+  display: block;
 }
 
 .footer-nav {
